@@ -218,6 +218,22 @@
                $.error('Unknown type: '+ type);
                return false; 
            }  
+       },
+       
+       //see http://stackoverflow.com/questions/7264899/detect-css-transitions-using-javascript-and-without-modernizr
+       supportsTransitions: function () {
+           var b = document.body || document.documentElement;
+           var s = b.style;
+           var p = 'transition';
+           if(typeof s[p] == 'string') {return true; }
+
+           // Tests for vendor specific prop
+           v = ['Moz', 'Webkit', 'Khtml', 'O', 'ms'],
+           p = p.charAt(0).toUpperCase() + p.substr(1);
+           for(var i=0; i<v.length; i++) {
+               if(typeof s[v[i] + p] == 'string') { return true; }
+           }
+           return false;
        }            
        
     };      
